# attrition_ESN

./: .gitignore  Manet_stephane_notebook_112025.ipynb  README.md  attrition_ESN.ipynb  prototype.ipynb  pyproject.toml  requirements.txt
attrition_ESN/: settings.yml
brand/: brand.py  brand.yml
manet_projet04/: __init__.py  settings.yml  shap_generator.py  var.py
