[project]
name = "manet-stephane-projet04-112025"
version = "0.1.0"
description = ""
authors = [
    {name = "Stéphane Manet",email = "stephane.manet@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imbalanced-learn (>=0.14.0,<0.15.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "shap (>=0.49.1,<0.50.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
